@@ -6,6 +6,7 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.Customizer;
+import org.springframework.security.config.annotation.method.configuration.EnableGlobalMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
@@ -13,44 +14,59 @@ import org.springframework.security.config.annotation.web.configurers.CorsConfig
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.web.servlet.config.annotation.EnableWebMvc;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
+import static org.springframework.http.HttpMethod.*;
 @Configuration
-@EnableWebSecurity // Annotation này dùng để kích hoạt Spring Security trong ứng dụng.
+@EnableWebSecurity
+@EnableWebMvc
 @RequiredArgsConstructor
 public class WebSecurityConfig {
     private final JwtTokenFilter jwtTokenFilter;
     @Value("${api.prefix}")
     private String apiPrefix;
-
     @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity httpSecurity) throws Exception{
+    public SecurityFilterChain securityFilterChain(HttpSecurity httpSecurity) throws Exception {
         httpSecurity
                 .csrf(AbstractHttpConfigurer::disable)
                 .addFilterBefore(jwtTokenFilter, UsernamePasswordAuthenticationFilter.class)
-                .authorizeHttpRequests(request -> {
-                    request.requestMatchers(
-                            String.format("%s/users/register", apiPrefix),
-                            String.format("%s/users/login", apiPrefix)
-                    ).permitAll()
-                            .anyRequest().authenticated(); //mọi yêu cầu phải được xác thực trước khi được phép truy cập.
-                });
+                .authorizeHttpRequests(request -> request
+                        .requestMatchers(String.format("%s/users/register", apiPrefix),
+                                String.format("%s/users/login", apiPrefix))
+                        .permitAll()
+                        .requestMatchers(GET,
+                                String.format("%s/products**", apiPrefix)).permitAll()
+                        .requestMatchers(POST, String.format("%s/users**", apiPrefix))
+                        .hasRole("ADMIN")
+                        .requestMatchers(PUT, String.format("%s/users/{id}", apiPrefix))
+                        .hasAnyRole("ADMIN", "USER")
+                        .requestMatchers(POST, String.format("%s/users/images/*", apiPrefix))
+                        .hasAnyRole("ADMIN", "USER")
+                        .requestMatchers(POST, String.format("%s/users/*", apiPrefix))
+                        .hasAnyRole("ADMIN", "USER")
+                        .anyRequest().authenticated());
+
         httpSecurity.cors(new Customizer<CorsConfigurer<HttpSecurity>>() {
             @Override
             public void customize(CorsConfigurer<HttpSecurity> httpSecurityCorsConfigurer) {
                 CorsConfiguration configuration = new CorsConfiguration();
-                configuration.setAllowedOrigins(List.of("*"));// Danh sách các origin được truy cập lấy tài nguyên từ server
-                configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS")); // ds các method được cấp quyền
-                configuration.setAllowedHeaders(Arrays.asList("authorization", "content-type", "x-auth-token"));// Cho phép trình duyệt gửi các header như trong hàm
-                configuration.setExposedHeaders(List.of("x-auth-token"));//trình duyệt có thể truy cập vào nội dung của header "x-auth-token" trong phản hồi từ máy chủ.
+                configuration.setAllowedOrigins(List.of("*"));
+                configuration.setAllowedMethods(Arrays.asList("GET","POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+                configuration.setAllowedHeaders(Arrays.asList("authorization", "content-type", "x-auth-token"));
+                configuration.setExposedHeaders(List.of("x-auth-token"));
                 UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-                source.registerCorsConfiguration("/**", configuration); // Đăng ký các đường dẫn được truy cập vào server
+                source.registerCorsConfiguration("/**", configuration);
                 httpSecurityCorsConfigurer.configurationSource(source);
             }
         });
+
         return httpSecurity.build();
     }
+
 }
